@@ -1,1 +1,2 @@
 DIST ovirt-engine-cli-3.2.0.7.tar.gz 58575 SHA256 d99780df0d996f91034423c2c4f99f5c25a93aa239c10e1de97b31061ae155f2 SHA512 ee64695e6d11e477389aa917a1247c5a7d87447f8737d4edbb913b95678b4877c1f3e7d1a85e93c370f3292f2d001e9255ae05bcfef8f3899524df28e8c2e7fe WHIRLPOOL d3e78a50354a6aeb0c32eff6261240b88fe5f53143e05018d61754781d5d4b7b3b28694dd74d8ab59717b1e75edd0eab1b9561077dbf99741241caa8bcb43e98
+DIST ovirt-engine-cli-3.4.0.5.tar.gz 75350 SHA256 427b00f23d895c9697f2d039c9607953b271307de6164396b70f7bf6da547e49 SHA512 e14f38a391ff94cc4ee0592b977d67c8996a4b5f8b1087db9ea7ee3a3d8150d3c96ae12dfa3d0ad4a6d33a6f9f8e239bdec6212e11601669b9c5e99fdb691910 WHIRLPOOL 812cd68604bbfc452b61c7c98dd7fbfe5efcd9b79eadaeb705dcee48343bc072e20c394886aa90dd43d14d572fa86ba54666daceb5a38d9b4bb17d4a96d4b00e
